RESOLVED FIXED57647
Flash plugins with wmode=transparent have black (instead of transparent) background in WebKit2 on Windows
https://bugs.webkit.org/show_bug.cgi?id=57647
Summary Flash plugins with wmode=transparent have black (instead of transparent) back...
Adam Roben (:aroben)
Reported 2011-04-01 11:20:33 PDT
To reproduce: 1. Go to http://us.battle.net/wow/en/game/dungeon-helper/ The Flash plugin on the right side of the page has a black background. It should instead have a transparent background (due to wmode=transparent). This bug does not occur in WebKit1.
Attachments
Let transparent windowless plugins draw into a graphics context with an alpha channel (1.86 KB, patch)
2011-05-04 08:24 PDT, Adam Roben (:aroben)
sam: review+
Adam Roben (:aroben)
Comment 1 2011-04-01 11:20:52 PDT
Adam Roben (:aroben)
Comment 2 2011-04-07 09:31:41 PDT
Adam Roben (:aroben)
Comment 3 2011-05-02 13:50:52 PDT
I am having a surprisingly hard time writing a test case for this. I can't get transparent plugins to show up at all.
Adam Roben (:aroben)
Comment 4 2011-05-04 08:19:14 PDT
I'm going to land this without a test case. I filed bug 60169 to cover writing a test.
Adam Roben (:aroben)
Comment 5 2011-05-04 08:24:54 PDT
Created attachment 92244 [details] Let transparent windowless plugins draw into a graphics context with an alpha channel
Adam Roben (:aroben)
Comment 6 2011-05-04 09:54:08 PDT
Note You need to log in before you can comment on or make changes to this bug.